--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,30 +1,13 @@
 <h1>Listing articles</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Author</th>
-      <th>Content</th>
-      <th>Published</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
     <% @articles.each do |article| %>
-      <tr>
-        <td><%= article.title %></td>
-        <td><%= article.author %></td>
-        <td><%= article.content %></td>
-        <td><%= article.published %></td>
-        <td><%= link_to 'Show', article %></td>
-        <td><%= link_to 'Edit', edit_article_path(article) %></td>
-        <td><%= link_to 'Destroy', article, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+      <div>
+        <%= article.title %>
+        <%= article.author %>
+        <%= article.content %>
+      </div>
+      <hr>
     <% end %>
-  </tbody>
-</table>
 
 <br>
 
