--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -3,7 +3,7 @@
     <% @articles.each do |article| %>
       <div>
         <h2><%= article.title %>
-        <h3><%= publication_status(article) %></h3>
+        <h3><%= article.publication_status %></h3>
         <h4><%= article.author %></h4>
         <p><%= article.content %></p>
       </div>
